--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script>
       let numOrStr = prompt("input number or string");
 
-      switch (true) {
+      switch (true) {  // true це умова для case в випадку якщо все сходиться
         case numOrStr === null:
           console.log("ви скасували");
           break;
@@ -21,7 +21,7 @@
           console.log(" number is Ba_NaN");
           break;
         }
-        default:
+        default:  // коли код вище не спрацював
           console.log("OK!");
           break;
       }
